Update Module 1 content and restore launch buttons

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ repository:
 html:
   home_page_in_navbar: true
   use_edit_page_button: false
-  use_repository_button: true
+  use_repository_button: false
   use_issues_button: false
   use_download_button: true
 
