Use clean assessment notebook with Google Drive submission

--- a/_toc.yml
+++ b/_toc.yml
@@ -5,5 +5,5 @@ chapters:
 - file: dashboard
 - file: 01_syntax
 - file: 01_quiz
-- file: Module1_Python_Foundations_Assessment
+- file: Module1_Assessment
 - file: 01_resources
