--- a/scripts/requirements-grading.txt
+++ b/scripts/requirements-grading.txt
@@ -4,3 +4,8 @@ nbclient>=0.7.0
 nbformat>=5.0.0
 requests>=2.25.0
 ipykernel>=6.0.0
+# Data science packages needed for notebook execution
+pandas>=2.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
